[package]
name = "yubico_ng"
version = "0.14.1"
authors = ["Mathijs van Veluw <black.dex@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"

description = "Yubikey client API library"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "OTP", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/BlackDex/yubico-rs"
readme = "README.md"

include = [
    "./README.md",
    "Cargo.toml",
    "LICENSE",
    "src/**/*.rs"
]

[lib]
name = "yubico_ng"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures = { version = "0.3", optional = true }
hmac = "0.12"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }
sha1 = "0.10"
threadpool = "1.8"
form_urlencoded = "1"

[dev-dependencies]
tokio = { version = ">=1.47", features = ["macros", "rt-multi-thread"], default-features = false }
futures = "0.3"
dotenvy = "0.15"

[features]
default = ["online-tokio", "native-tls"]
online-tokio = ["futures"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# Linting config
# https://doc.rust-lang.org/rustc/lints/groups.html
[workspace.lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

# Deny
arithmetic_overflow = "deny"
deprecated_in_future = "deny"
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
missing_copy_implementations = "deny"
nonstandard_style = { level = "deny", priority = -1 }
noop_method_call = "deny"
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unknown_or_malformed_diagnostic_attributes = { level = "deny", priority = -2 }
unreachable_pub = "deny"
unstable_features = "deny"
unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
# Warn
dbg_macro = "warn"
todo = "warn"

# Deny
bool_comparison = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
equatable_if_let = "deny"
float_cmp_const = "deny"
indexing_slicing = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
manual_map = "deny"
mem_forget = "deny"
needless_lifetimes = "deny"
nonminimal_bool = "deny"
pedantic = { level = "deny", priority = -1 }
redundant_clone = "deny"
str_to_string = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_self_imports = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"

[lints]
workspace = true
